# ruian_backend

./: README.md  config.yaml  pyproject.toml  pytest.ini  run.sh
data/: users_example.csv  worklog_202510.xlsx  worklog_demo.xlsx
docs/: 实现方案_v1.md
docs/api/: openapi.json  openapi.yaml
scripts/: export_docs.py  import_users.py
src/app/: config.py  database.py  exceptions.py  main.py
src/app/api/: auth.py  production.py  upload.py  validation.py  worklog.py
src/app/auth/: __init__.py  dependencies.py  jwt.py  password.py
src/app/db/: schema.sql
src/app/model/: __init__.py  employee_worklog.py  production_info.py  user.py
src/app/schemas/: __init__.py  error.py
src/app/services/: oss_service.py  upload_service.py
src/app/utils/: data_vld.py  db_utils.py  enums.py  parse_util.py
tests/: test_main.py
